Fix alignment for post date on the question page.

--- a/sites/all/themes/ungoko/less/ungoko-style.less
+++ b/sites/all/themes/ungoko/less/ungoko-style.less
@@ -259,13 +259,14 @@
 *                          Node Question                        *
 ****************************************************************/
 .node-question {
-  .submitted { border-bottom: 1px solid @grayLighter; border-top: 1px solid @grayLighter; font-style: normal; padding: 1em 0; 
+  .submitted { border-bottom: 1px solid @grayLighter; border-top: 1px solid @grayLighter; font-style: normal; overflow: hidden; padding: 1em 0; 
     [class^='icon-'] { margin: 3px 1px 0 0; }
   }
 }
 .node-question .question-status { margin-right: 10px; }
 .node-question .question-status-value { color: @textColor; }
 .node-question .question-status-action form { display: inline-block; margin: 0; }
+.role-counselor .node-question .question-post-date { margin-top: 5px; }
 /****************************************************************
 *                        Question Comment                       *
 ****************************************************************/
